# ASHi

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ashi/: __init__.py  ai.py  callbacks.py  logger.py
ashi/backends/: __init__.py  aim.py  base.py  comet.py  discord.py  mlflow.py  neptune.py  slack.py  tensorboard.py  wandb.py
tests/: test_ai.py  test_backends.py  test_event.py  test_logger.py
train_logger/: __init__.py  ai.py  callbacks.py  event.py
train_logger/backends/: console.py  mlflow.py  neptune.py  telegram.py
